Max width of 900px on main dashboard components. Fixed overflow scroll issue.

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -5,6 +5,7 @@
     height: 100vh;
     overflow: auto;
     z-index: 5;
+    overflow-x: hidden;
 
     &::-webkit-scrollbar {
         width: 8px;
