--- a/src/components/Dashboard/Earnings/Earnings.module.scss
+++ b/src/components/Dashboard/Earnings/Earnings.module.scss
@@ -2,6 +2,7 @@
 
 .earnings {
     width: 100%;
+    min-width: 900px;
     padding: 32px;
     border-radius: $borderRadius;
 
