--- a/src/components/Dashboard/Header/Header.module.scss
+++ b/src/components/Dashboard/Header/Header.module.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     height: 42px;
+    min-width: 900px;
 
     &__title {
         font-weight: 800;
