--- a/src/components/Dashboard/Totals/Totals.module.scss
+++ b/src/components/Dashboard/Totals/Totals.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     margin: 40px 0;
+    min-width: 900px;
 
     &__card {
         &:not(:last-child) {
